# dynamic-foraging-task

./: .gitignore  LICENSE  README.md  dynamic-foraging-task.sln  pull_request_template.md  pyproject.toml  requirements.txt  tash
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: production_merge_action.yml  update_main_action.yml  update_version.yml
bonsai/: .gitignore  Bonsai.config  NuGet.config  foraging.bonsai  setup.ps1
bonsai/Bonsai.exe.WebView2/EBWebView/: Last Version  Local State  RevisitationBloomfilter
bonsai/Bonsai.exe.WebView2/EBWebView/AutoLaunchProtocolsComponent/1.0.0.9/: manifest.fingerprint  manifest.json  protocols.json
bonsai/Bonsai.exe.WebView2/EBWebView/BrowserMetrics/: BrowserMetrics-6671EB2B-264.pma
bonsai/Bonsai.exe.WebView2/EBWebView/Default/: BrowsingTopicsState  DIPS  DIPS-shm  DIPS-wal  DashTrackerDatabase  ExtensionActivityComp  ExtensionActivityEdge  Favicons  History  History-journal  Login Data  Login Data For Account  Network Action Predictor  Preferences  Secure Preferences  Top Sites  Visited Links  Vpn Tokens  Web Data  Web Data-journal
bonsai/Bonsai.exe.WebView2/EBWebView/Default/DawnGraphiteCache/: data_1  index
bonsai/Bonsai.exe.WebView2/EBWebView/Default/DawnWebGPUCache/: data_1  index
bonsai/Bonsai.exe.WebView2/EBWebView/Default/EdgeHubAppUsage/: EdgeHubAppUsageSQLite.db
bonsai/Bonsai.exe.WebView2/EBWebView/Default/Extension Rules/: LOG
bonsai/Bonsai.exe.WebView2/EBWebView/Default/Extension Scripts/: LOG
bonsai/Bonsai.exe.WebView2/EBWebView/Default/Extension State/: LOG  LOG.old
bonsai/Bonsai.exe.WebView2/EBWebView/Default/GPUCache/: data_0  data_1  data_2  index
bonsai/Bonsai.exe.WebView2/EBWebView/Default/Network/: Cookies  Network Persistent State  TransportSecurity  Trust Tokens
bonsai/Bonsai.exe.WebView2/EBWebView/Default/Safe Browsing Network/: Safe Browsing Cookies
bonsai/Bonsai.exe.WebView2/EBWebView/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  index
bonsai/Bonsai.exe.WebView2/EBWebView/GraphiteDawnCache/: data_1  index
bonsai/Bonsai.exe.WebView2/EBWebView/ShaderCache/: data_1  index
bonsai/Bonsai.exe.WebView2/EBWebView/component_crx_cache/: 455D1A3B5F7FA199F27CB165FA6F54DF7972FBB6C62D422A14C2415791175931  5110A67904F33F66A66CC9BE4DD3DA419A596DE32DAAE8F62BAA998D3BE5CA83  56E96B6819FAF673A2CC4750059D5D42BB2E89FEFC7C4D81896F64B01B35E789  6B1561D18D6D7D238C1FA4FB8AEF54E1F1E6B574D958BC0A41CA955F90AFD7DC  A99D66CFCE8CA170740CE0403956F4DFAF4683829A89F4B7AD9C95303871E284  metadata.json
src/desktop_shortcuts/: BoxA no console.bat  BoxA with console.bat  BoxA.bat  BoxA_no_bonsai.bat  BoxB no console.bat  BoxB with console.bat  BoxB.bat  BoxB_no_bonsai.bat  BoxC no console.bat  BoxC with console.bat  BoxC.bat  BoxC_no_bonsai.bat  BoxD no console.bat  BoxD with console.bat  BoxD.bat  BoxD_no_bonsai.bat  CameraA.bat  CameraB.bat  CameraC.bat  CameraD.bat  Configure BoxA.bat  Configure BoxB.bat  Configure BoxC.bat  Configure BoxD.bat  Foraging2.bat  start_popup.bat
src/docs/: automatic_training_demo.ipynb
src/foraging_gui/: AutoTrain.ui  Calibration.py  Calibration.ui  CalibrationLaser.py  CalibrationLaser.ui  Camera.py  Camera.ui  Dialogs copy.py  Dialogs.py  Foraging.bat  Foraging.py  Foraging1.bat  Foraging2.bat  Foraging2.py  Foraging3.bat  Foraging3.py  Foraging4.bat  Foraging4.py  ForagingGUI.py  ForagingGUI.ui  ForagingGUI_Ephys.ui  ForagingSettings.json  GenerateMetadata.py  HideLines.ui  LaserCalibration.json  LicksDistribution.py  Manipulator.py  Manipulator.ui  MetaData.ui  MotorStage.py  MotorStage.ui  MyFunctions.py  OpticalTagging.ui  OptoTest.py  OptoTest.ui  Optogenetics.py  Optogenetics.ui  RandomReward.ui  RigJsonBuilder.py  Settings_box1.txt  (+33 more)
src/foraging_gui/reward_schedules/: random_walk.py  test_truncexp.py  uncoupled_block.py
src/foraging_gui/schema_widgets/: behavior_parameters_widget.py  fib_parameters_widget.py  operation_control_widget.py  opto_parameters_widget.py  q_field_box_layout.py  schema_widget_base.py  session_model_widget.py  session_parameters_widget.py
src/foraging_gui/task_widgets/: behavior_parameters_widget.py  fib_parameters_widget.py  opto_parameters_widget.py  task_widget_base.py
src/foraging_gui/ui_files/: Camera.ui  ForagingGUI.ui  ForagingGUI_Ephys.ui  LicksDistribution.ui  Optogenetics.ui
src/setting_templates/: ForagingRig__rig.json  ForagingSettings.json  Settings_box1.csv  Settings_box2.csv  Settings_box3.csv  Settings_box4.csv  TrainingStagePar.json  WaterCalibrationPar_1.json
src/soundcard_setup/: GoCueChecker.bonsai  GoCueChecker.bonsai.layout  GoCueUploader.bonsai  GoCueUploader.bonsai.layout
src/update_scripts/: check_github_status.bat  update_from_github_to_main.bat  update_from_github_to_production_testing.bat
src/widget_schemas/: weight_and_water_schema.py
src/workflows/: Extensions.csproj  cameratesting.bonsai  cameratesting.bonsai.layout  foraging.bonsai  foraging.bonsai.layout  foraging2.bonsai  foraging2.bonsai.layout  foraging3.bonsai  foraging3.bonsai.layout  foraging4.bonsai  foraging4.bonsai.layout  osc-test.bonsai  osc-test.bonsai.layout  workflows.sln
src/workflows/Cameras/: Camera_boxA.bonsai  Camera_boxB.bonsai  Camera_boxB.bonsai.layout  Camera_boxC.bonsai  Camera_boxD.bonsai  Camera_boxD.bonsai.layout
src/workflows/Extensions/: EnvironmentSensor.bonsai  EventLoggerAndSender.bonsai  EventOscFormatter.bonsai  IplImageRotateVisualizer.cs  LogHarpDemux.bonsai  LogOsc.bonsai  LogOscDemux.bonsai  OscToCsv.cs  ParseSettingCsv.cs  TriggeredAnalogOutput.cs
test/: test_optogenetic_logic.py
test/resources/: old_generate_trials.py
tests/: ValidateCheckpointSaving.py
(+116 files in other folders)
