[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-foraging-task"
description = "Dynamic Foraging Task used at the Allen Institute for Neural Dynamics"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
readme = "README.md"

dynamic = ["version"]

dependencies = [
    'numpy',
    'scipy',
    'matplotlib',
    'PyQt5',
    'pandas',
    'pyserial',
    "pyOSC3@git+https://github.com/glopesdev/pyosc3.git@master",
    "newscale@git+https://github.com/AllenNeuralDynamics/python-newscale@axes-on-target",
    "aind-auto-train@git+https://github.com/AllenNeuralDynamics/aind-foraging-behavior-bonsai-automatic-training.git@main",
    "aind-slims-api@git+https://github.com/AllenNeuralDynamics/aind-slims-api@main",
    "aind-dynamic-foraging-models@git+https://github.com/AllenNeuralDynamics/aind-dynamic-foraging-models@main",
    "pynwb",
    "requests",
    "harp-python",
    "openpyxl",
    "deepdiff",
    "aind-data-schema==1.1.0",
    "aind-data-schema-models==0.5.6",
    "pydantic==2.9.2",
    "pyyaml",
    "pyqtgraph"

]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "foraging_gui.__version__"}


