[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-foraging-task"
description = "Dynamic Foraging Task used at the Allen Institute for Neural Dynamics"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
readme = "README.md"

dynamic = ["version"]

dependencies = [
    "numpy >=2, <3",
    "scipy >=1, <2",
    "matplotlib >=3, <4",
    "PyQt5 >=5, <6",
    "pandas >=2, <3",
    "pyserial >=3, <4",
    "pyOSC3@git+https://github.com/glopesdev/pyosc3.git@master",
    "newscale@git+https://github.com/AllenNeuralDynamics/python-newscale@axes-on-target",
    "aind-auto-train@git+https://github.com/AllenNeuralDynamics/aind-foraging-behavior-bonsai-automatic-training.git@main",
    "aind-slims-api@git+https://github.com/AllenNeuralDynamics/aind-slims-api@main",
    "aind-dynamic-foraging-models@git+https://github.com/AllenNeuralDynamics/aind-dynamic-foraging-models@main",
    "aind-behavior-services >=0.8, <0.9",
    "pynwb >=2, <3",
    "requests >=2, <3",
    "harp-python >=0.3, <2",
    "openpyxl >=3, <4",
    "deepdiff >=8, <9",
    "aind-data-schema==1.1.0",
    "aind-data-schema-models==0.5.6",
    "pydantic >=2.9.2, <3",
    "stagewidget==1.0.4.dev5",
    "python-logging-loki >=0.3.1, <2",
    "pykeepass >=4.0.7, <5",
    "pyyaml >=6, <7",
    "pyqtgraph >=0.13, <2"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "foraging_gui.__version__"}
